--- a/css/main.css
+++ b/css/main.css
@@ -978,7 +978,7 @@ a {
 }
 
 .offer {
-	background: url("../img/home/parallax-bg.png") right center no-repeat;
+	background: url("../images/home/parallax-bg.png") right center no-repeat;
 	background-size: cover
 }
 
